feat(recording): Add record files view and refresh functionality
- Implement RecordFilesProvider to display recorded files in the sidebar
- Add refresh command for record files view
- Update package.json with new commands, views, and menu configurations
- Update localization files with new view and command labels
- Enhance extension activation to register record files provider and refresh command

--- a/l10n/bundle.l10n.it.json
+++ b/l10n/bundle.l10n.it.json
@@ -32,5 +32,7 @@
   "config.minimalMode.description": "Se mostrare solo l'icona nella barra di stato quando la registrazione è ferma.",
   "config.showTimer.description": "Se mostrare il timer nella barra di stato quando si registra.",
   "view.recordFiles.name": "File di registrazione",
-  "view.recordFiles.contextualTitle": "File di registrazione"
+  "view.recordFiles.contextualTitle": "File di registrazione",
+  "view.actions.name": "Azioni",
+  "view.actions.contextualTitle": "Azioni"
 }
