--- a/l10n/bundle.l10n.json
+++ b/l10n/bundle.l10n.json
@@ -21,16 +21,19 @@
   "Activating VS Code Recorder": "Activating VS Code Recorder",
   "Deactivating VS Code Recorder": "Deactivating VS Code Recorder",
   "displayName": "VS Code Recorder",
-  "description": "Record your code editing activity in VS Code",
+  "description": "Record your VS Code activity and export it to different formats",
   "command.startRecording.title": "Start Recording",
   "command.stopRecording.title": "Stop Recording",
   "command.openSettings.title": "Open Settings",
-  "config.title": "VS Code Recorder Configuration",
-  "config.exportPath.description": "Path where the recordings will be exported. Use '${workspaceFolder}' to refer to the workspace folder.",
-  "config.createPathOutsideWorkspace.description": "Whether to create the export path if it does not exist, even if it is outside the workspace.",
-  "config.exportFormats.description": "Formats to export the recording in.",
-  "config.minimalMode.description": "Whether to show only the icon in the status bar when recording is stopped.",
-  "config.showTimer.description": "Whether to show the timer in the status bar when recording.",
-  "view.recordFiles.name": "Record Files",
-  "view.recordFiles.contextualTitle": "Record Files"
+  "command.refreshRecordFiles.title": "Refresh",
+  "view.recordFiles.name": "Recorded Files",
+  "view.recordFiles.contextualTitle": "Recorded Files",
+  "config.title": "VS Code Recorder",
+  "config.exportPath.description": "The path where the recordings will be saved. You can use `${workspaceFolder}` to specify a path relative to the workspace folder.",
+  "config.createPathOutsideWorkspace.description": "Allow creating the export path outside the workspace folder.",
+  "config.exportFormats.description": "The formats to export the recordings to.",
+  "config.minimalMode.description": "Show only the icon in the status bar.",
+  "config.showTimer.description": "Show the timer in the status bar.",
+  "view.actions.name": "Actions",
+  "view.actions.contextualTitle": "Actions"
 }
