feat(actions): Add Actions view and current file tracking
- Implement ActionsProvider to display actions in the sidebar
- Add support for tracking current file during recording
- Update localization files with new action view labels
- Enhance extension activation to register actions provider
- Update recording start/stop methods to update actions view state

--- a/l10n/bundle.l10n.it.json
+++ b/l10n/bundle.l10n.it.json
@@ -34,5 +34,6 @@
   "view.recordFiles.name": "File di registrazione",
   "view.recordFiles.contextualTitle": "File di registrazione",
   "view.actions.name": "Azioni",
-  "view.actions.contextualTitle": "Azioni"
+  "view.actions.contextualTitle": "Azioni",
+  "Current File: {fileName}": "File corrente: {fileName}"
 }
