--- a/l10n/bundle.l10n.json
+++ b/l10n/bundle.l10n.json
@@ -11,29 +11,13 @@
   "Not recording": "Not recording",
   "Recording cancelled": "Recording cancelled",
   "Recording finished": "Recording finished",
-  "No workspace folder found. To process the recording is needed a workspace folder": "No workspace folder found. To process the recording is needed a workspace folder",
-  "Recording end date time is not set": "Recording end date time is not set",
-  "Recording start date time is not set": "Recording start date time is not set",
   "No export formats specified": "No export formats specified",
+  "No workspace folder found. To process the recording is needed a workspace folder": "No workspace folder found. To process the recording is needed a workspace folder",
+  "Recording date time is not properly set": "Recording date time is not properly set",
   "Current time: {0}": "Current time: {0}",
   "Stop Recording": "Stop Recording",
   "Start Recording": "Start Recording",
   "Activating VS Code Recorder": "Activating VS Code Recorder",
   "Deactivating VS Code Recorder": "Deactivating VS Code Recorder",
-  "displayName": "VS Code Recorder",
-  "description": "Record your VS Code activity and export it to different formats",
-  "command.startRecording.title": "Start Recording",
-  "command.stopRecording.title": "Stop Recording",
-  "command.openSettings.title": "Open Settings",
-  "command.refreshRecordFiles.title": "Refresh",
-  "view.recordFiles.name": "Recorded Files",
-  "view.recordFiles.contextualTitle": "Recorded Files",
-  "config.title": "VS Code Recorder",
-  "config.exportPath.description": "The path where the recordings will be saved. You can use `${workspaceFolder}` to specify a path relative to the workspace folder.",
-  "config.createPathOutsideWorkspace.description": "Allow creating the export path outside the workspace folder.",
-  "config.exportFormats.description": "The formats to export the recordings to.",
-  "config.minimalMode.description": "Show only the icon in the status bar.",
-  "config.showTimer.description": "Show the timer in the status bar.",
-  "view.actions.name": "Actions",
-  "view.actions.contextualTitle": "Actions"
+  "Current File: {fileName}": "Current File: {fileName}"
 }
