--- a/l10n/bundle.l10n.json
+++ b/l10n/bundle.l10n.json
@@ -19,5 +19,10 @@
   "Start Recording": "Start Recording",
   "Activating VS Code Recorder": "Activating VS Code Recorder",
   "Deactivating VS Code Recorder": "Deactivating VS Code Recorder",
-  "Current File: {fileName}": "Current File: {fileName}"
+  "Current File: {fileName}": "Current File: {fileName}",
+  "command.deleteRecordFile.title": "Delete",
+  "command.revealInExplorer.title": "Reveal in File Explorer",
+  "Are you sure you want to delete {name}?": "Are you sure you want to delete {name}?",
+  "Yes": "Yes",
+  "No": "No"
 }
