feat(recording): Add custom folder name option for recordings
- Introduce new configuration option to ask for custom folder names
- Update recording process to support optional custom folder naming
- Add localization support for custom folder name input dialog
- Enhance file generation and processing to handle custom folder names
- Update package.json to include new configuration setting

--- a/l10n/bundle.l10n.json
+++ b/l10n/bundle.l10n.json
@@ -24,5 +24,8 @@
   "command.revealInExplorer.title": "Reveal in File Explorer",
   "Are you sure you want to delete {name}?": "Are you sure you want to delete {name}?",
   "Yes": "Yes",
-  "No": "No"
+  "No": "No",
+  "config.askFolderName.description": "Ask for a custom folder name before starting a recording",
+  "Enter recording folder name": "Enter recording folder name",
+  "Enter a name for the recording folder": "Enter a name for the recording folder"
 }
