feat(export): Add .gitignore integration for export path
- Introduce option to automatically add export path to .gitignore
- Add command and button to manually add export path to .gitignore
- Update configuration settings to support .gitignore integration
- Enhance localization with new .gitignore-related messages
- Implement file system watcher for .gitignore changes

--- a/l10n/bundle.l10n.it.json
+++ b/l10n/bundle.l10n.it.json
@@ -1,25 +1,33 @@
 {
-  "Reset to default": "Ripristina predefiniti",
+  "Reset to default": "Ripristina predefinito",
   "Open Settings": "Apri Impostazioni",
   "Cancel": "Annulla",
   "No export path specified": "Nessun percorso di esportazione specificato",
-  "error.workspaceFolderNotFound": "Cartella di lavoro non trovata",
+  "error.workspaceFolderNotFound": "Nessuna cartella workspace trovata",
   "Export path does not exist": "Il percorso di esportazione non esiste",
   "No active text editor": "Nessun editor di testo attivo",
   "Already recording": "Registrazione già in corso",
   "Recording started": "Registrazione avviata",
   "Not recording": "Nessuna registrazione in corso",
   "Recording cancelled": "Registrazione annullata",
-  "Recording finished": "Registrazione completata",
-  "No workspace folder found. To process the recording is needed a workspace folder": "Nessuna cartella di lavoro trovata. Per elaborare la registrazione è necessaria una cartella di lavoro",
-  "Recording end date time is not set": "Data e ora di fine registrazione non impostata",
-  "Recording start date time is not set": "Data e ora di inizio registrazione non impostata",
+  "Recording finished": "Registrazione terminata",
   "No export formats specified": "Nessun formato di esportazione specificato",
-  "Current time: {0}": "Tempo attuale: {0}",
+  "No workspace folder found. To process the recording is needed a workspace folder": "Nessuna cartella workspace trovata. Per elaborare la registrazione è necessaria una cartella workspace",
+  "Recording date time is not properly set": "Data e ora della registrazione non impostati correttamente",
+  "Current time: {0}": "Tempo corrente: {0}",
   "Stop Recording": "Ferma Registrazione",
   "Start Recording": "Avvia Registrazione",
-  "Activating VS Code Recorder": "Attivazione di VS Code Recorder",
-  "Deactivating VS Code Recorder": "Disattivazione di VS Code Recorder",
+  "Activating VS Code Recorder": "Attivazione VS Code Recorder",
+  "Deactivating VS Code Recorder": "Disattivazione VS Code Recorder",
+  "Current File: {fileName}": "File corrente: {fileName}",
+  "command.deleteRecordFile.title": "Elimina",
+  "command.revealInExplorer.title": "Mostra in Esplora File",
+  "Are you sure you want to delete {name}?": "Sei sicuro di voler eliminare {name}?",
+  "Yes": "Si",
+  "No": "No",
+  "config.askFolderName.description": "Chiedi un nome personalizzato per la cartella prima di iniziare una registrazione",
+  "Enter recording folder name": "Inserisci nome cartella registrazione",
+  "Enter a name for the recording folder": "Inserisci un nome per la cartella di registrazione",
   "displayName": "VS Code Recorder",
   "description": "Registra la tua attività di editing del codice in VS Code",
   "command.startRecording.title": "Inizia Registrazione",
@@ -35,5 +43,7 @@
   "view.recordFiles.contextualTitle": "File di registrazione",
   "view.actions.name": "Azioni",
   "view.actions.contextualTitle": "Azioni",
-  "Current File: {fileName}": "File corrente: {fileName}"
+  "Add to .gitignore": "Aggiungi a .gitignore",
+  "Export path already in .gitignore": "Percorso di esportazione già in .gitignore",
+  "Error updating .gitignore": "Errore durante l'aggiornamento di .gitignore"
 }
