feat: change all occurrences of recorder to crowd-code

--- a/l10n/bundle.l10n.it.json
+++ b/l10n/bundle.l10n.it.json
@@ -17,8 +17,8 @@
   "Current time: {0}": "Tempo corrente: {0}",
   "Stop Recording": "Ferma Registrazione",
   "Start Recording": "Avvia Registrazione",
-  "Activating VS Code Recorder": "Attivazione VS Code Recorder",
-  "Deactivating VS Code Recorder": "Disattivazione VS Code Recorder",
+  "Activating crowd-code": "Attivazione crowd-code",
+  "Deactivating crowd-code": "Disattivazione crowd-code",
   "Current File: {fileName}": "File corrente: {fileName}",
   "command.deleteRecordFile.title": "Elimina",
   "command.revealInExplorer.title": "Mostra in Esplora File",
@@ -28,12 +28,12 @@
   "config.askFolderName.description": "Chiedi un nome personalizzato per la cartella prima di iniziare una registrazione",
   "Enter recording folder name": "Inserisci nome cartella registrazione",
   "Enter a name for the recording folder": "Inserisci un nome per la cartella di registrazione",
-  "displayName": "VS Code Recorder",
+  "displayName": "crowd-code",
   "description": "Registra la tua attività di editing del codice in VS Code",
   "command.startRecording.title": "Inizia Registrazione",
   "command.stopRecording.title": "Ferma Registrazione",
   "command.openSettings.title": "Apri Impostazioni",
-  "config.title": "Configurazione VS Code Recorder",
+  "config.title": "Configurazione crowd-code",
   "config.exportPath.description": "Percorso dove le registrazioni saranno esportate. Usa '${workspaceFolder}' per riferirti alla cartella di lavoro.",
   "config.createPathOutsideWorkspace.description": "Se creare il percorso di esportazione se non esiste, anche se è fuori dalla cartella di lavoro.",
   "config.exportFormats.description": "Formati in cui esportare la registrazione.",
