--- a/l10n/bundle.l10n.json
+++ b/l10n/bundle.l10n.json
@@ -17,8 +17,8 @@
   "Current time: {0}": "Current time: {0}",
   "Stop Recording": "Stop Recording",
   "Start Recording": "Start Recording",
-  "Activating VS Code Recorder": "Activating VS Code Recorder",
-  "Deactivating VS Code Recorder": "Deactivating VS Code Recorder",
+  "Activating crowd-code": "Activating crowd-code",
+  "Deactivating crowd-code": "Deactivating crowd-code",
   "Current File: {fileName}": "Current File: {fileName}",
   "command.deleteRecordFile.title": "Delete",
   "command.revealInExplorer.title": "Reveal in File Explorer",
